--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-project",
   "version": "1.0.0",
   "description": "Making a Video Steaming Platform like Youtube.",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "Javascript",
@@ -19,5 +19,10 @@
   "devDependencies": {
     "nodemon": "^3.1.3",
     "prettier": "^3.3.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   }
 }
